	if an as.character() method called it.

    o	Quartz device did not restore clipping region when filling
	background for a new page. This could be observed in
	multi-page bitmap output as stale outer regions of the plot.

    o	p.adjust(*, method, n)	now works correctly for the rare case
	n > length(p), also when method differs from "bonferroni" or
	"none", thanks to a patch from Gordon Smyth.

    o	tcrossprod() wrongly failed in some cases, when one of the
	arguments was a vector and the other a matrix.

    o	det(m) and determinant.matrix(m) now return NaN when m
	contains NA or NaN's in crucial entries.

    o	[cr]bind(..., deparse.level=2) was not always giving names
	when documented to do so.  (Discovered whilst investigating
	PR#14189.)



		CHANGES IN R VERSION 2.10.1


NEW FEATURES

    o	The PCRE library has been updated to version 8.00.

    o	R CMD INSTALL has new options --no-R, --no-libs, --no-data,
	--no-help, --no-demo, --no-exec, and --no-inst to suppress
	installation of the specified part of the package.  These are
	intended for special purposes (e.g. building a database
	of help pages without fully installing all packages).

    o	The documented line-length limit of 4095 bytes when reading
	from the console now also applies also to parse(file="")
	(which previously had a limit of around 1024 bytes).

    o	A Bioconductor mirror can be set for use by setRepositories()
	via the option "BioC_mirror", e.g. the European mirror can be
	selected by
	options(BioC_mirror="http://bioconductor.statistik.tu-dortmund.de")

    o	Double-clicking in a tk_select.list() list box now selects the
	item and closes the list box (as happens on the Windows
	select.list() widget).


INSTALLATION

    o	configure will be able to find a usable libtiff in some rare
	circumstances where it did not previously (where libtiff
	needed to be linked explicitly against -ljpeg).

    o	Making refman.pdf works around a problem with the indexing
	with hyperref 6.79d and later.

